@@ -1,2 +1,0 @@
-streamtuner-local is a streamtuner plugin providing access to your
-local MP3 repository. It can extract ID3 information from your songs.
